# Solstice-Exchange

./: .clangd  .gitignore  BENCHMARK_HISTORY.md  CMakeLists.txt  LICENSE  Makefile  PRICING_GUIDE.md  README.md  backtest.sh  pyproject.toml  requirements.txt  setup.py  structure.py  test_broadcaster_standalone.cpp  test_websocket_client.py  websocket_client.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: push.yml  release.yml
enums/: CMakeLists.txt  order_side.cpp  order_side.h  ticker.cpp  ticker.h
goldpkg/: gold  gold.cfg
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  matcher.cpp  matcher.h  orchestrator.cpp  orchestrator.h  order.cpp  order.h  order_book.cpp  order_book.h  order_config.h  order_processor.cpp  order_processor.h  orderbook.cpp  orderbook.h  processor.cpp  processor.h  transaction.cpp  transaction.h
src/broadcaster/: CMakeLists.txt  README.md  broadcaster.cpp  broadcaster.h
src/common/: CMakeLists.txt  asset_class.cpp  asset_class.h  broadcaster.cpp  broadcaster.h  order.cpp  order.h  transaction.cpp  transaction.h
src/config/: CMakeLists.txt  config.cpp  config.h  logging.h
src/config/backtest/: data_config.json  data_config.py
src/config/enums/: log_level.h
src/enums/: CMakeLists.txt  log_level.cpp  log_level.h  market_side.cpp  market_side.h  order_side.cpp  order_side.h  order_type.cpp  order_type.h  position_type.cpp  position_type.h  strategy.cpp  strategy.h  ticker.cpp  ticker.h  time_in_force.cpp  time_in_force.h
src/matching/: CMakeLists.txt  README.md  matcher.cpp  matcher.h  order_book.cpp  order_book.h  order_processor.cpp
src/pricing/: CMakeLists.txt  README.md  equity_price_data.cpp  equity_price_data.h  future_price_data.cpp  future_price_data.h  pricer.cpp  pricer.h  pricing_utils.cpp  pricing_utils.h
src/strategy/: CMakeLists.txt  README.md  dispatcher.cpp  dispatcher.h  entry_point.py  market_data.cpp  market_data.h  py_interface.cpp  py_interface.h  strategy.h
src/strategy/backtest/: config.json  config.py  entry_point.py
src/strategy/components/: CMakeLists.txt  account.cpp  account.h  moving_average.cpp  moving_average.h  position.cpp  position.h
src/strategy/implementations/: CMakeLists.txt  sharp_movements.cpp  sharp_movements.h
src/utils/: CMakeLists.txt  getRandom.cpp  getRandom.h  get_random.cpp  get_random.h  logging.h  time_point.cpp  time_point.h  timepoint.cpp  timepoint.h  truncate.cpp  truncate.h
tests/: CMakeLists.txt  test_order.cpp
tests/unit/: test_asset_class.cpp  test_config.cpp  test_matcher.cpp  test_orchestrator.cpp  test_order.cpp  test_order_book.cpp  test_pricer.cpp  test_underlying.cpp
